methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:7: error: type green is not a member of object java.awt.Color
    if(getCouleurSol():Color.green){
                             ^